<resources>
    <string name="app_name">MobileCheckSH</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="title_activity_base">BaseActivity</string>

    <string name="current_task_title">"当前任务"</string>
    <string name="his_task_title">"历史任务"</string>
    <string name="address_task_title">"通讯录"</string>
    <string name="message_task_title">"消息"</string>

    <string name="current_task_tab">"当前任务"</string>
    <string name="his_task_tab">"历史任务"</string>
    <string name="address_tab">"通讯录"</string>
    <string name="message_tab">"消息"</string>

    <string name="see_more">"更多"</string>
    <string name="drop_dowm">下拉刷新</string>
    <string name="release_update">松开刷新</string>
    <string name="loading">正在加载...</string>
    <string name="login_mess">请检查用户名或密码是否填写</string>
    <string name="login_error">登录失败</string>
    <string name="network_err">请检查网络连接</string>
    <string name="response_false">请求数据错误</string>
    <string name="response_exception">数据解析错误</string>

    <string name="delete">删除</string>
    <string name="takephoto">拍照</string>
    <string name="call">呼叫</string>

    <string name="caseNo">报案号</string>
    <string name="carNo">定损车牌号</string>

    <string name="about_system_text">手机查勘Android客户端</string>
    <string name="about_system_current_code">当前版本号:</string>
    <string name="about_system_laster_code">已是最新版本</string>
    <string name="about_system_upgrade">升　　级</string>
    <string name="about_system_weberror">没有检测到更新版本</string>
    <string name="about_system_partner">中国电信股份有限公司武汉分公司  合作伙伴</string>


    <string name="dialog_title">温馨提示</string>
    <string name="dialog_positive">确定</string>
    <string name="dialog_negative">取消</string>
    <string name="catchexception_title">错误日志</string>
    <string name="login_neterror">网络连接错误</string>
    <string name="setting_save">保存</string>
    <string name="setting_page">设置</string>
    <string name="about_page">关于</string>
    <!-- SETTING -->
    <string name="settingip_ip">IP设置:</string>
    <string name="settingip_sign">用户名:</string>
    <string name="settingip_save">保存</string>
    <string name="settingip_nomes">不能为空</string>
    <string name="settingip_error">ip地址格式错误</string>
    <string name="settingip_pwph">幅　面:　</string>
    <string name="settingip_FPS">帧　率:　</string>
    <string name="settingip_BIT">码　率:　</string>
    <string name="settingip_connect_type">协　议:　</string>
    <string name="setting_defaultFPS">30</string>
    <string name="setting_defaultBIT">800</string>
    <string name="setting_defaultPW_PH">1280*720</string>
    <string name="setting_ip_format">(例IP地址格式为:192.168.1.119)</string>


    <string name="fix_net">网络设置</string>
    <string name="ip_set_text">恢复初始化设置</string>
    <string name="ssid_text">SSID</string>
    <string name="ip_text">IP地址</string>
    <string name="gateway_text">掩码</string>
    <string name="netmask_text">网关</string>

</resources>
