<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <com.whhcxw.survey.picc.ui.Titlebar
        xmlns:custom="http://schemas.android.com/apk/res/cx.mobilechecksh"
        android:id="@+id/titlebar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        custom:titlebarBackground="?attr/titlebar_backgroud"
        custom:titlebarLeftBackground="?attr/titlebar_left_backgroud"
        custom:titlebarRightBackground="?attr/titlebar_right_backgroud"
        custom:titlebarTitle="@string/fix_net" />

        <RelativeLayout
            android:layout_below="@+id/titlebar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
		
           <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dip"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip" >

                <EditText
                    android:id="@+id/ssid_edit"
                    style="@style/setting_edittext"
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/default_edittext_height"
                    android:editable="false" />

                <TextView
                    style="@style/setting_edittext_text"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/default_edittext_height"
                    android:text="@string/ssid_text" />
            </RelativeLayout>
            
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="110dip"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip" >

                <EditText
                    android:id="@+id/ip_edit"
                    style="@style/setting_edittext"
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/default_edittext_height" 
                    android:editable="false"/>

                <TextView
                    style="@style/setting_edittext_text"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/default_edittext_height"
                    android:text="@string/ip_text" />
            </RelativeLayout>
            
                       
           <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="180dip"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"  >

                <EditText
                    android:id="@+id/gateway_edit"
                    style="@style/setting_edittext"
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/default_edittext_height" 
                    android:editable="false"/>

                <TextView
                    style="@style/setting_edittext_text"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/default_edittext_height"
                    android:text="@string/gateway_text" />
            </RelativeLayout>
            
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="250dip"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip" >

                <EditText
                    android:id="@+id/netmask_edit"
                    style="@style/setting_edittext"
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/default_edittext_height"
                    android:editable="false" />

                <TextView
                    style="@style/setting_edittext_text"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/default_edittext_height"
                    android:text="@string/netmask_text" />
            </RelativeLayout>
            

		
		
		
            <Button
                android:id="@+id/fix_net_btn"
                style="?attr/large_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/about_system_text2"
                android:layout_marginBottom="30dip"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"
                android:layout_marginTop="10dip" 
                android:text="@string/ip_set_text"/>
            
               <TextView
                android:id="@+id/about_system_text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/about_version_owner"
                android:layout_marginBottom="5dip"
                android:layout_centerHorizontal="true"
                android:text="@string/about_system_partner"
                android:textColor="@color/gray"
                android:textSize="13dip" />
            
             <ImageView
                 android:layout_alignParentBottom="true"
                android:id="@+id/about_version_owner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@drawable/about_version_owner" />
            
        </RelativeLayout>

</RelativeLayout>