<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/bottomHeight_size"
    android:orientation="horizontal">
<RelativeLayout
    android:layout_width="1dp"
    android:layout_height="match_parent"
    android:layout_weight="1"
    >
  <LinearLayout
      android:id="@+id/cur_task_tab"
      android:layout_width="wrap_content"
      android:layout_height="match_parent"
      android:orientation="vertical"
      android:gravity="center"
      android:padding="5dp"
      android:layout_alignParentLeft="true"
      android:layout_centerVertical="true"
      >
     <ImageView
         android:id="@+id/cur_task_img"
         android:layout_width="@dimen/default_size"
         android:layout_height="@dimen/default_size"
         android:scaleType="centerInside"
         android:src="@drawable/ic_launcher"
         />
      <TextView
          android:id="@+id/cur_task_tv"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/current_task_tab"
          android:textSize="@dimen/text_tab_size"
          android:textColor="@color/defaulttext_black"
          />
  </LinearLayout>
</RelativeLayout>

    <RelativeLayout
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        >
        <LinearLayout
            android:id="@+id/his_task_tab"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="5dp"
            android:layout_centerInParent="true"
            android:layout_centerVertical="true"
            >
            <ImageView
                android:id="@+id/his_task_img"
                android:layout_width="@dimen/default_size"
                android:layout_height="@dimen/default_size"
                android:scaleType="centerInside"
                android:src="@drawable/ic_launcher"
                />
            <TextView
                android:id="@+id/his_task_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/his_task_tab"
                android:textSize="@dimen/text_tab_size"
                android:textColor="@color/defaulttext_black"
                />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        >
        <LinearLayout
            android:id="@+id/address_task_tab"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="5dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            >
            <ImageView
                android:id="@+id/address_task_img"
                android:layout_width="@dimen/default_size"
                android:layout_height="@dimen/default_size"
                android:scaleType="centerInside"
                android:src="@drawable/ic_launcher"
                />
            <TextView
                android:id="@+id/address_task_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address_tab"
                android:textSize="@dimen/text_tab_size"
                android:textColor="@color/defaulttext_black"
                />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        >
        <LinearLayout
            android:id="@+id/message_task_tab"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="5dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            >
            <ImageView
                android:id="@+id/message_task_img"
                android:layout_width="@dimen/default_size"
                android:layout_height="@dimen/default_size"
                android:scaleType="centerInside"
                android:src="@drawable/ic_launcher"
                />
            <TextView
                android:id="@+id/message_task_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/message_tab"
                android:textSize="@dimen/text_tab_size"
                android:textColor="@color/defaulttext_black"
                />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>
